# SIn

./: .gitignore  Cargo.toml  Makefile  README.md
crates/sin-cli/: Cargo.toml
crates/sin-cli/src/: main.rs
crates/sin-core/: Cargo.toml
crates/sin-core/src/: allowlist.rs  error.rs  event.rs  keys.rs  lib.rs  nip98.rs  nonce.rs  replay.rs  session.rs
crates/sin-demo/: Cargo.toml
crates/sin-demo/src/: main.rs
crates/sin-middleware/: Cargo.toml
crates/sin-middleware/src/: lib.rs
crates/sin-server/: Cargo.toml
deploy/: config.env.example  deploy.sh  setup-pi.sh  sin-rf-socket.service  sin.service
examples/home-hub/: Cargo.toml
examples/home-hub/src/: main.rs
examples/home-hub/test/: live.mjs
examples/rf-socket/: Cargo.toml
examples/rf-socket/src/: main.rs
examples/rf-socket/test/: live.mjs
web/: build.mjs  package-lock.json  package.json
web/public/: index.html  manifest.webmanifest  styles.css  sw.js
web/src/: app.js  client.js  idb.js  identity.js  signer.js  vault.js
web/test/: interop.mjs  live.mjs
