[workspace]
resolver = "2"
members = [
    "crates/sin-core",
    "crates/sin-cli",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Pextar/SIn"
rust-version = "1.75"

[workspace.dependencies]
secp256k1 = { version = "0.31", features = ["std", "rand", "hashes", "global-context"] }
bech32 = "0.11"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
hex = "0.4"
thiserror = "1"
