[package]
name = "sin-core"
version = "0.1.0"
description = "Passwordless, nostr/bitcoin-style sign-in: keypairs, NIP-98 verification, and stateless challenges."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
secp256k1.workspace = true
bech32.workspace = true
sha2.workspace = true
hmac.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
hex.workspace = true
thiserror.workspace = true
