[package]
name = "sin-server"
version = "0.1.0"
description = "The SIn authentication server — serves the signer PWA and auth endpoints."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "sin-server"
path = "src/main.rs"

[dependencies]
sin-core = { path = "../sin-core" }
sin-middleware = { path = "../sin-middleware" }
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde_json.workspace = true
hex.workspace = true
rand.workspace = true
hmac.workspace = true
sha2.workspace = true
