[package]
name = "home-hub"
version = "0.1.0"
description = "Example: a passwordless home hub (switches, dimmers, sensors, scenes) fronted by SIn session auth with role checks."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "home-hub"
path = "src/main.rs"

[dependencies]
sin-core = { path = "../../crates/sin-core" }
sin-middleware = { path = "../../crates/sin-middleware" }
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
rand.workspace = true
hmac.workspace = true
sha2.workspace = true
